--- a/service/templates/serviceaccount.yaml
+++ b/service/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "..serviceAccountName" . }}
+  name: {{ include "service.serviceAccountName" . }}
   labels:
-    {{- include "..labels" . | nindent 4 }}
+    {{- include "service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
